<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rahulkumar.photoapp.ViewControllers.Activities.DetailActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background" />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btnDislike"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/heart"
                android:layout_gravity="right|bottom"
                android:padding="@dimen/dimen_5dp"
                android:visibility="gone"
                />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btnLike"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/heart_dislike"
                android:layout_gravity="right|bottom"
                android:padding="@dimen/dimen_5dp"
                />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/lorem_ispum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/lorem_ispum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latititude"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/lorem_ispum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/lorem_ispum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fav_count"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtfavCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_5dp"
                    android:text="@string/lorem_ispum"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
